# benchmarks

./: .gitattributes  .gitignore  README.md
.githooks/: pre-commit
.github/workflows/: size-gate.yml
runs/2026-06-16-typescript-native-tsgo/: README.ko.md  README.md  checksums.txt  manifest.json  results.json  run.sh
runs/2026-06-20-uv-audit-supply-chain/: README.ko.md  README.md  checksums.txt  manifest.json  results.json  run.sh
runs/2026-06-20-uv-audit-supply-chain/fixture/: pyproject.toml
runs/2026-06-26-deno-28-npm-toolchain/: README.ko.md  README.md  checksums.txt  manifest.json  results.json  run.sh
runs/2026-07-06-valkey-91-redis-alternative/: README.ko.md  README.md  checksums.txt  manifest.json  results.json  run.sh  smoke-2026-07-23.txt
runs/2026-07-07-wasmtime-46-wasi-sandbox/: .gitignore  README.ko.md  README.md  checksums.txt  manifest.json  observed-output.txt  results.json  run.sh
runs/2026-07-07-wasmtime-46-wasi-sandbox/harness/host/: Cargo.toml
runs/2026-07-07-wasmtime-46-wasi-sandbox/harness/host/src/: main.rs
runs/2026-07-09-astro-7-rust-agent-native/: .gitignore  README.ko.md  README.md  checksums.txt  manifest.json  probe-result.json  results.json  run.sh
runs/2026-07-10-lancedb-embedded-vector-lakehouse/: README.ko.md  README.md  checksums.txt  manifest.json  probe-result.json  probe.py  requirements.txt  results.json  run.sh
runs/2026-07-11-otel-weaver-semconv-registry/: README.ko.md  README.md  checksums.txt  diff.json  evidence.txt  manifest.json  results.json  run.sh
scripts/: add-run.sh  gen-index.py  verify-size.sh
(+89 files in other folders)
