[project]
name = "uv-audit-fixture"
version = "0.0.0"
requires-python = ">=3.12"
# Deliberately vulnerable, pinned old versions so `uv audit` / `pip-audit` have
# something to find. These are known-vulnerable releases — never use in real code.
dependencies = [
    "requests==2.19.1",
    "jinja2==2.10",
    "pyyaml==5.3",
    "flask==0.12.2",
]
